[package]
name = "drop-awaiter"
version = "0.1.0"
edition = "2021"
authors = ["Olexiy Kulchitskiy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ok-ul-ch/drop_awaiter"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
